overlays/uksouth-lloyds/olympus/europa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: europa.${cluster_name}.${cluster_location}.bink.sh
  namespace: configuration
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: europa.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /config_service
            pathType: Prefix
            backend:
              service:
                name: europa-api
                port:
                  number: 80
  tls:
    - hosts:
        - europa.${cluster_name}.${cluster_location}.bink.sh
